--- a/lib/lukimat_web/templates/question/form.html.eex
+++ b/lib/lukimat_web/templates/question/form.html.eex
@@ -6,12 +6,6 @@
   <% end %>
 
   <div class="form-group">
-    <%= label f, :level, class: "control-label" %>
-    <%= text_input f, :level, class: "form-control" %>
-    <%= error_tag f, :level %>
-  </div>
-
-  <div class="form-group">
     <%= label f, :content, class: "control-label" %>
     <%= text_input f, :content, class: "form-control" %>
     <%= error_tag f, :content %>
@@ -24,9 +18,21 @@
   </div>
 
   <div class="form-group">
-    <%= label f, :choices, class: "control-label" %>
-    <%= text_input f, :choices, class: "form-control" %>
-    <%= error_tag f, :choices %>
+    <%= label f, :choice_id, class: "control-label" %>
+    <%= number_input f, :choice_id, class: "form-control" %>
+    <%= error_tag f, :choice_id %>
+  </div>
+
+  <div class="form-group">
+    <%= label f, :choice_content, class: "control-label" %>
+    <%= text_input f, :choice_content, class: "form-control" %>
+    <%= error_tag f, :choice_content %>
+  </div>
+
+  <div class="form-group">
+    <%= label f, :form_id, class: "control-label" %>
+    <%= text_input f, :form_id, class: "form-control" %>
+    <%= error_tag f, :form_id %>
   </div>
 
   <div class="form-group">
