--- a/lib/lukimat_web/templates/answer/index.html.eex
+++ b/lib/lukimat_web/templates/answer/index.html.eex
@@ -3,17 +3,26 @@
 <table class="table">
   <thead>
     <tr>
+      <th>ID</th>
+      <th>Question ID</th>
+      <th>User ID</th>
       <th>Answer</th>
       <th>Is correct</th>
-
+      <th>Updated at</th>
+      <th>Inserted at</th>
       <th></th>
     </tr>
   </thead>
   <tbody>
 <%= for answer <- @answers do %>
     <tr>
+      <td><%= answer.id %></td>
+      <td><%= answer.question_id %></td>
+      <td><%= answer.user_id %></td>
       <td><%= answer.answer %></td>
       <td><%= answer.is_correct %></td>
+      <td><%= answer.updated_at %></td>
+      <td><%= answer.inserted_at %></td>
 
       <td class="text-right">
         <span><%= link "Show", to: answer_path(@conn, :show, answer), class: "btn btn-default btn-xs" %></span>
