--- a/lib/lukimat_web/templates/form/index.html.eex
+++ b/lib/lukimat_web/templates/form/index.html.eex
@@ -15,7 +15,11 @@
     <tr>
       <td><%= form.level %></td>
       <td><%= form.name %></td>
-      <td><%= form.questions.length %></td>
+      <td>
+        <%= for question <- form.questions do %>
+          <%= question.id %>,
+        <% end %>
+      </td>
 
       <td class="text-right">
         <span><%= link "Show", to: form_path(@conn, :show, form), class: "btn btn-default btn-xs" %></span>
