--- a/lib/lukimat_web/templates/page/index.html.eex
+++ b/lib/lukimat_web/templates/page/index.html.eex
@@ -1,35 +1,29 @@
-<div class="jumbotron">
-  <h2><%= gettext "Welcome to %{name}!", name: "Phoenix" %></h2>
-  <p class="lead">A productive web framework that<br />does not compromise speed and maintainability.</p>
+<div class="jumbotron jumbotron-welcome">
+  <h2><%= gettext "Tervetuloa %{name}!", name: @current_user.first_name %> :)</h2>
+  <p class="lead">Oletko valmis uusiin haasteisiin?</p>
 </div>
 
-<div class="row marketing">
-  <div class="col-lg-6">
-    <h4>Resources</h4>
-    <ul>
+<div class="row">
+  <div class="col">
+    <ul class="list-unstyled">
+      <%= for form <- @forms do %>
+        <li>
+          <a class="btn btn-fill" href="<%= fill_form_path(@conn, :new, form.id) %>">
+            <p class="h5">
+              <i class="fa fa-pencil fa-2x text-orange" aria-hidden="true"></i>
+              <%= form.name %>
+              <small class="text-muted"></small>
+            </p>
+          </a>
+        </li>
+      <% end %>
       <li>
-        <a href="http://phoenixframework.org/docs/overview">Guides</a>
-      </li>
-      <li>
-        <a href="https://hexdocs.pm/phoenix">Docs</a>
-      </li>
-      <li>
-        <a href="https://github.com/phoenixframework/phoenix">Source</a>
-      </li>
-    </ul>
-  </div>
-
-  <div class="col-lg-6">
-    <h4>Help</h4>
-    <ul>
-      <li>
-        <a href="http://groups.google.com/group/phoenix-talk">Mailing list</a>
-      </li>
-      <li>
-        <a href="http://webchat.freenode.net/?channels=elixir-lang">#elixir-lang on freenode IRC</a>
-      </li>
-      <li>
-        <a href="https://twitter.com/elixirphoenix">@elixirphoenix</a>
+        <a class="btn btn-fill" href="#none">
+          <p class="h5">
+            <i class="fa fa-file-text-o fa-2x text-orange" aria-hidden="true"></i>
+            Vastauksesi
+          </p>
+        </a>
       </li>
     </ul>
   </div>
