--- a/lib/lukimat_web/templates/question/form.html.eex
+++ b/lib/lukimat_web/templates/question/form.html.eex
@@ -1,4 +1,4 @@
-<%= form_for @changeset, @action, fn f -> %>
+<%= form_for @changeset, @action, [multipart: true], fn f -> %>
   <%= if @changeset.action do %>
     <div class="alert alert-danger">
       <p>Oops, something went wrong! Please check the errors below.</p>
@@ -27,6 +27,12 @@
     <%= label f, :type, class: "control-label" %>
     <%= text_input f, :type, class: "form-control" %>
     <%= error_tag f, :type %>
+  </div>
+
+  <div class="form-group">
+    <%= label f, :audio, class: "control-label" %>
+    <%= file_input f, :audio, class: "form-control" %>
+    <%= error_tag f, :audio %>
   </div>
 
   <div class="form-group">
