--- a/lib/lukimat_web/templates/user/form.html.eex
+++ b/lib/lukimat_web/templates/user/form.html.eex
@@ -6,39 +6,29 @@
   <% end %>
 
   <div class="form-group">
-    <%= label f, :first_name, class: "control-label" %>
-    <%= text_input f, :first_name, class: "form-control" %>
-    <%= error_tag f, :first_name %>
+    <%= input f, :first_name, required: true %>
   </div>
 
   <div class="form-group">
-    <%= label f, :last_name, class: "control-label" %>
-    <%= text_input f, :last_name, class: "form-control" %>
-    <%= error_tag f, :last_name %>
+    <%= input f, :last_name, required: true %>
   </div>
 
   <div class="form-group">
-    <%= label f, :email, class: "control-label" %>
-    <%= text_input f, :email, class: "form-control" %>
-    <%= error_tag f, :email %>
+    <%= input f, :email, required: true %>
   </div>
 
   <div class="form-group">
     <%= label f, :language, class: "control-label" %>
-    <%= text_input f, :language, class: "form-control" %>
+    <%= select f, :language, %{"Suomi" => "fi" }, class: "form-control" %>
     <%= error_tag f, :language %>
   </div>
 
   <div class="form-group">
-    <%= label f, :password, class: "control-label" %>
-    <%= password_input f, :password, class: "form-control" %>
-    <%= error_tag f, :password %>
+    <%= input f, :password, required: true %>
   </div>
 
   <div class="form-group">
-    <%= label f, :password_confirmation, class: "control-label" %>
-    <%= password_input f, :password_confirmation, class: "form-control" %>
-    <%= error_tag f, :password_confirmation %>
+    <%= input f, :password_confirmation, required: true %>
   </div>
 
   <div class="form-group">
@@ -48,16 +38,16 @@
   </div>
 
   <div class="form-group">
-    <%= label f, :class, class: "control-label" %>
-    <%= text_input f, :class, class: "form-control" %>
-    <%= error_tag f, :class %>
+    <%= input f, :class, using: :text_input, required: true %>
   </div>
 
-  <div class="form-group">
-    <%= label f, :role, class: "control-label" %>
-    <%= text_input f, :role, class: "form-control" %>
-    <%= error_tag f, :role %>
-  </div>
+  <%= if has_role?(assigns[:current_user], ["teacher", "admin"]) do %>
+    <div class="form-group">
+      <%= label f, :role, class: "control-label" %>
+      <%= select f, :role, %{"Student" => "student", "Teacher" => "teacher" }, class: "form-control" %>
+      <%= error_tag f, :role %>
+    </div>
+  <% end %>
 
   <div class="form-group">
     <%= submit "Submit", class: "btn btn-primary" %>
